Revert back to the jdk internal strict